Removing get verb